--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,3 +21,9 @@
     justify-content: flex-start;
     min-width: 300px;
 }
+
+@media screen and (max-width: 768px) {
+    .navbarMenu {
+        display: none;
+    }
+}
