--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,7 +7,7 @@
 
 .logo {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     margin-right: auto;
     gap: 12px;
